--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".Registeractivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_registeractivity"
+            android:theme="@style/Theme.BrotherJOHNishandsome" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
